assets/common.css
body {
    margin: 0px;
    padding: 0px;
    color: #792a08;
    font-family: monospace;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    justify-content: space-between;
    min-height: 100vh;
}

.header {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
    margin-bottom: 50px;
    width: 100%;
}

.header img {
    height: 15vh;
}

.mascot {
    position: relative;
}

img.mascot {
    position: relative;
    height: 40vh;
    left: -3vw;
}

.menu {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    list-style-type: none;
    text-align: center;
    color: #D3967B;
    margin: 0px;
    padding: 0px;
    width: 100%;
}

.menu > li {
    user-select: none;
    width: 100%;
}

.menu.small {
    font-size: small;
}

.menu.large {
    font-size: x-large;
}

.menu.width-auto {
    width: auto;
}

.menu > li > a {
    color: #D3967B;
    text-decoration: none;
}

.menu > li > a:hover {
    text-decoration: underline;
}

footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 50px;
    width: 100%;
    align-self: flex-end;
}

.footer-content {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 50px;
    margin-top: 10px;
}

.footer-content i {
    margin: 5px;
    color: #D3967B;
}

.animation-list {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    width: 75%;
    gap: 25px;
}

.animation-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 20vw;
}

.animation-item > video {
    width: 100%;
}

.animation-title {
    margin-top: 5px;
    text-align: center;
}

.photo-grid {
    display: grid;
    justify-items: center;
    align-items: center;
    grid-template-columns: 1fr 1fr;
    width: 75%;
    gap: 25px;
}

.photo-grid.small {
    grid-template-columns: 1fr 1fr;
}

.photo-grid.large {
    grid-template-columns: 1fr 1fr 1fr;
}

.photo-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    gap: 25px;
}

.photo-item {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.photo-grid > .photo-item {
    width: 100%;
}
.photo-list > .photo-item {
    width: 10rem;
}

.photo-item img {
    max-width: 100%;
    max-height: 75vh;
}

.photo-title {
    margin-top: 5px;
    text-align: center;
}

.large .photo-wide {
    grid-column: span 3 / auto;
}

.photo-tall {
    grid-row: span 2 / auto;
}

img.avatar {
    height: 35vh;
}

.about {
    width: 50vw;
    text-align: justify;
}

@media (max-width: 650px) {
    .menu.large {
        flex-direction: column;
        justify-content: space-evenly;
    }

    .animation-item {
        width: 90%;
    }

    .photo-grid {
        grid-template-columns: 100%;
    }

    .photo-grid.small {
        grid-template-columns: 100%;
    }
    .photo-grid.large {
        grid-template-columns: 100%;
    }

    .photo-item {
        width: 100%;
        max-height: 100vh;
    }

    .large .photo-wide, .photo-wide {
        grid-column: auto;
    }

    .photo-tall {
        grid-row: auto;
    }

    .about {
        width: 90vw;
    }
}

